--- a/frontend/styles/empleos.css
+++ b/frontend/styles/empleos.css
@@ -74,19 +74,20 @@ h1 + p {
     padding: .5rem 1rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     gap: 3rem;
     border-bottom: 1px solid var(--border);
 }
 
 
-nav{
-    align-items: flex-start;
+.navegacion nav{
+    justify-content: flex-start;
+    padding: 10px;
     a{
         text-decoration: none;
         color: rgb(146, 145, 145);
         transition: color 0.2s;
-        font-weight: 500;
+        font-weight: 700;
+        padding: 10px;
         &:hover, &:focus{
             color: var(--text-secondary);
             outline: none;
@@ -95,13 +96,14 @@ nav{
     }
 }
 
-header div {
+.botones {
     display: flex;
-    align-content: center;
+    justify-content: flex-end;
     gap: 1rem;
+    margin-left: auto;
 }
 
-header div .cv {
+.botones .cv {
     color: var(--text-primary);
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
@@ -120,7 +122,7 @@ header div .cv {
     }
 }
 
-header div .perfil  {
+.botones .perfil  {
    background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBeG7G_fClYlNDdKTzEHA670Uh9TsfTwHCNng2nJOHZCsw_jzXKbuYg-ldPUGFyi06-RD8U4HtIew9rpl5T8KZpJLMfjHDm4EzNUz8rmjZK31QJTHhMqTY3_Kb8A2X_2zq_sDsq_v05AiSRHLlDPcyX1NmEoPCfW01ygMJcjz3gb0lUUZO_9qQq67stmy6-p1WbZReGs7T6RvlsxS_vN6KZi9UyUHJ80dTs-NADdsMxt3pXS8dF07JN11dXZAZp-UdqyFt7glf9jmA");
    background-size: cover;
    border-radius: 50%;
@@ -143,10 +145,12 @@ main > header {
 }
 
 form {
-    max-width: 60rem;
+    max-width: 900px;
     width: 100%;
     margin: 0 auto;
-    padding-inline: 1rem;
+    display: flex;
+    flex-direction: column; 
+    gap: 1rem;
 }
 
 form > div svg{
@@ -156,7 +160,7 @@ form > div svg{
     margin-left: 10px;
 }
 
-form > div {
+.search-bar {
     display: flex;
     align-items: center;
     background-color: var(--input-bg);
@@ -178,30 +182,87 @@ form input[type="text"] {
     outline: none;
 }
 
-form input[type="text"]::placeholder {
-    color: var(#64748b);
-}
 
-main > section:nth-child(2) div {
-    display: flex;
-    justify-content: center;
-    
-}
-main > section:nth-child(2) .selectores {
+.selectores {
     display: grid;
-    max-width: 900px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
-main > section:nth-child(2) div select {
+.selectores select{
     background-color: var(--input-bg);
     color: var(--text-primary);
     border-radius: 0.5rem;
-    padding: 14px;
-    margin: 0 .4rem;
-    margin-top: 10px;
+    padding: 8px;
+    margin: 0 .5rem;
+    margin-top: 5px;
     border: none;
     font-family: inherit;
     font-size: 1rem;    
 }
 
+.empleos {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 900px; 
+    margin: 2rem auto; 
+}
+
+.empleos h2 {
+    font-size: 1.75rem;
+    font-weight: 700;
+    margin: 1rem 0; 
+}
+
+.empleos{
+    article {
+        border: 1px solid var(--border);    
+        padding: 1rem;
+        border-radius: 0.5rem;
+        display: flex;           
+        flex-direction: column;  
+    }
+
+    article h3 {
+        font-size: 1.5rem;
+        font-weight: 600;
+    }
+
+    article .p-subtitulo {
+        color: var(--text-muted);
+        margin-bottom: 1rem;
+    }
+
+    article p {
+        color: var(--text-secondary);
+    }
+}
+.contenido{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.fila-superior{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ .fila-superior button{
+    align-self: flex-end;
+    background-color: var(--primary);
+    color: var(--text-primary);
+    border: none;
+    padding: 0.74rem 1.5rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    font-weight: 400;
+    cursor: pointer;
+    transition: background-color 0.2s;
+
+    &:hover, &:focus {
+        background-color: var(--primary-hover);
+        outline: none;
+    }
+}
