--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -87,10 +87,13 @@ nav{
         color: rgb(146, 145, 145);
         transition: color 0.2s;
         font-weight: 500;
-        &:hover, &:focus{
+
+        &:hover, 
+        &:focus{
             color: var(--text-secondary);
             outline: none;
         }
+
 
     }
 }
